Docker go fixes (#49)
* Use /opt/go for GOPATH

* also make sure that gpadmin's .bash_profile sources /etc/bashrc. This
is useful for when we have an interactive login shell, as when we
`su - gpadmin`

* export gopath when setting up gpadmin user

--- a/concourse/docker/pxf-dev-base/Dockerfile
+++ b/concourse/docker/pxf-dev-base/Dockerfile
@@ -6,21 +6,22 @@ ADD pxf_src /tmp/pxf_src
 
 # install Go utilities
 RUN cd /tmp && \
-        wget -q https://dl.google.com/go/go1.11.1.linux-amd64.tar.gz && \
-        tar -C /usr/local -xzf go1.11.1.linux-amd64.tar.gz && \
-        rm -f go1.11.1.linux-amd64.tar.gz && \
+    wget -q https://dl.google.com/go/go1.11.1.linux-amd64.tar.gz && \
+    tar -C /usr/local -xzf go1.11.1.linux-amd64.tar.gz && \
+    rm -f go1.11.1.linux-amd64.tar.gz && \
     cd - && \
-    GOPATH=/root/go /usr/local/go/bin/go get github.com/golang/dep/cmd/dep && \
-    GOPATH=/root/go /usr/local/go/bin/go get github.com/onsi/ginkgo/ginkgo && \
-    echo >>/etc/bashrc 'export PATH="/root/go/bin:/usr/local/go/bin:$PATH"' && \
-    echo >>/etc/bashrc 'export GOPATH=/root/go'
+    GOPATH=/opt/go /usr/local/go/bin/go get github.com/golang/dep/cmd/dep && \
+    GOPATH=/opt/go /usr/local/go/bin/go get github.com/onsi/ginkgo/ginkgo && \
+    echo >>/etc/bashrc 'export GOPATH=/opt/go' && \
+    echo >>/etc/bashrc 'export PATH=${GOPATH}/bin:/usr/local/go/bin:$PATH'
 
 RUN cd /tmp/pxf_src/server && \
-    GOPATH="/root/go" PATH="/root/go/bin:/usr/local/go/bin:$PATH" make tar && \
+    GOPATH=/opt/go PATH=/opt/go/bin:/usr/local/go/bin:$PATH make tar && \
     CWD=$(pwd) && cd /tmp/pxf_src/automation && \
     PXF_HOME=/tmp/pxf_src/server/build/stage make dev && \
     mkdir -p /home/gpadmin && \
     mv /root/.m2 /home/gpadmin && \
-    chown -R 1000:1000 /home/gpadmin/.m2 && \
+    chown -R 1000:1000 /home/gpadmin && \
+    chown -R 1000:1000 /opt/go && \
     ln -s /home/gpadmin/.gradle /root/.gradle && \
     rm -rf /tmp/pxf_src
