Refactor CI scripts to use the updated docker images (with gpadmin user already present) (#50)

--- a/concourse/docker/centos6-hdp-secure/Dockerfile
+++ b/concourse/docker/centos6-hdp-secure/Dockerfile
@@ -1,4 +1,6 @@
-FROM pivotaldata/gpdb-dev:centos6
+ARG BASE_IMAGE=gpdb-dev:centos6
+
+FROM pivotaldata/${BASE_IMAGE}
 
 ARG TERM=xterm-256color
 ARG CLUSTER_NAME=hdp
