Use uid for gpadmin as the user does not exist yet on ubuntu

--- a/concourse/docker/pxf-dev-base/Dockerfile
+++ b/concourse/docker/pxf-dev-base/Dockerfile
@@ -2,8 +2,6 @@ ARG BASE_IMAGE=gpdb-dev:centos6
 
 FROM pivotaldata/${BASE_IMAGE}
 
-ADD pxf_src /tmp/pxf_src
-
 # install Go utilities
 RUN cd /tmp && \
     wget -q https://dl.google.com/go/go1.11.1.linux-amd64.tar.gz && \
@@ -15,6 +13,8 @@ RUN cd /tmp && \
     echo >> /etc/bashrc 'export GOPATH=/opt/go' && \
     echo >> /etc/bashrc 'export PATH=${GOPATH}/bin:/usr/local/go/bin:$PATH'
 
+ADD pxf_src /tmp/pxf_src
+
 RUN cd /tmp/pxf_src/server && \
     GOPATH=/opt/go PATH=/opt/go/bin:/usr/local/go/bin:$PATH make tar && \
     CWD=$(pwd) && cd /tmp/pxf_src/automation && \
@@ -24,5 +24,5 @@ RUN cd /tmp/pxf_src/server && \
     mv /root/.gradle /home/gpadmin && \
     ln -s /home/gpadmin/.gradle /root/.gradle && \
     ln -s /home/gpadmin/.m2 /root/.m2 && \
-    chown -R gpadmin:gpadmin /home/gpadmin && \
+    chown -R 1000:1000 /home/gpadmin && \
     rm -rf /tmp/pxf_src
