Refactor PXF cli to use gp-common-go-libs and Cobra for parsing flags (#51)
Co-authored-by: Oliver Albertini <oalbertini@pivotal.io>
Co-authored-by: Francisco Guerrero <aguerrero@pivotal.io>
Co-authored-by: Lav Jain <ljain@pivotal.io>

* Use cobra to make a version command
* Use gp-go-common-lib to get segment host list
* Initial prototype for using the cluster execute command instead of gpssh
* Do pxf init on all nodes including master
* also change the CI script to not init manually on master
* Output error messages and host id when something fails
* Use cobra's version and help, add cluster command
* Add tests for root, cluster, and end to end
* Use version from go tool
* go tool gets version from server/gradle.properties now
* pxf-service script (bash) now has execute permissions,
and is put in place by pxf-cli/go/src/pxf-cli/Makefile, not gradle
* Check errors based on values in remoteOut.Errors
* Avoid starting PXF on master node when restarting service
* Add pxf-cli level README
* Remove Apache license

--- a/server/Makefile
+++ b/server/Makefile
@@ -17,7 +17,7 @@
 #
 # protect the default target for this file from the targets in Makefile.global
 
-PXF_CLI_MAKEFILE_LOCATION = pxf-cli/go/src/pxf-cluster
+PXF_CLI_MAKEFILE_LOCATION := pxf-cli/go/src/pxf-cli
 
 default: all
 
@@ -55,34 +55,32 @@ help:
 	@echo	"  - tar - bundle PXF along with tomcat into a single tarball"
 	@echo	"  - doc - creates aggregate javadoc under docs"
 
-all:
+all: test-cli assemble-cli install-cli
 	./gradlew clean tar aggregateJavadoc $(BUILD_PARAMS)
 
 compile:
 	./gradlew compileJava
 
-compile-cli:
-	make -C $(PXF_CLI_MAKEFILE_LOCATION)
+build-cli:
+	make -C ${PXF_CLI_MAKEFILE_LOCATION}
 
-test-cli: compile-cli
-	make -C $(PXF_CLI_MAKEFILE_LOCATION) test
+test-cli:
+	make -C ${PXF_CLI_MAKEFILE_LOCATION} test
 
 clean-cli:
-	make -C $(PXF_CLI_MAKEFILE_LOCATION) clean
+	make -C ${PXF_CLI_MAKEFILE_LOCATION} clean
 
-assemble-cli: compile-cli
-	mkdir -p build/stage/bin
-	cp $(PXF_CLI_MAKEFILE_LOCATION)/pxf-cluster build/stage/bin
+assemble-cli:
+	make -C ${PXF_CLI_MAKEFILE_LOCATION} tar
 
-install-cli: compile-cli
-	mkdir -p $(PXF_HOME)/bin
-	cp $(PXF_CLI_MAKEFILE_LOCATION)/pxf-cluster $(PXF_HOME)/bin
+install-cli:
+	make -C ${PXF_CLI_MAKEFILE_LOCATION} install
 
 test unittest: test-cli
 	./gradlew test
 
 tar: assemble-cli
-	./gradlew tar $(BUILD_PARAMS)
+	./gradlew tar ${BUILD_PARAMS}
 
 clean: clean-cli
 	./gradlew clean
@@ -95,7 +93,7 @@ doc:
 
 .PHONY: install
 install: install-cli
-	./gradlew install $(BUILD_PARAMS)
+	./gradlew install ${BUILD_PARAMS}
 
 .PHONY: version
 version:
