--- a/concourse/tasks/test_pxf.yml
+++ b/concourse/tasks/test_pxf.yml
@@ -11,5 +11,7 @@ params:
   IMPERSONATION: true
   HADOOP_CLIENT: HDP
   GROUP: smoke
+  TARGET_OS: centos
+  TARGET_OS_VERSION: 6
 run:
   path: pxf_src/concourse/scripts/test_pxf.bash
