Disable multinode smoke test for PXF

--- a/concourse/tasks/install_hadoop.yml
+++ b/concourse/tasks/install_hadoop.yml
@@ -5,5 +5,9 @@ inputs:
   - name: cluster_env_files
   - name: pxf_src
   - name: pxf_tarball
+params:
+  IMPERSONATION: true
+  TARGET_OS: centos
+  PXF_JVM_OPTS:
 run:
   path: pxf_src/concourse/scripts/install_hadoop.bash
