Configure shutdown port for PXF (#59)
* Configure shutdown port for PXF
* Upgrade gradle to 4.10.3

--- a/concourse/docker/pxf-dev-base/Dockerfile
+++ b/concourse/docker/pxf-dev-base/Dockerfile
@@ -15,10 +15,10 @@ RUN cd /tmp && \
 
 ADD pxf_src /tmp/pxf_src
 
-RUN cd /tmp/pxf_src/server && \
+RUN cd /tmp/pxf_src && \
+    export BUILD_PARAMS='-Dorg.gradle.daemon=false' && \
     GOPATH=/opt/go PATH=/opt/go/bin:/usr/local/go/bin:$PATH make tar && \
-    CWD=$(pwd) && cd /tmp/pxf_src/automation && \
-    PXF_HOME=/tmp/pxf_src/server/build/stage make dev && \
+    cd automation && PXF_HOME=/tmp/pxf_src/server/build/stage make dev && \
     mkdir -p /home/gpadmin && \
     mv /root/.m2 /home/gpadmin && \
     mv /root/.gradle /home/gpadmin && \
