--- a/server/build.gradle
+++ b/server/build.gradle
@@ -102,24 +102,24 @@ subprojects { subProject ->
     }
 
     dependencies {
-        testCompile 'junit:junit:4.11'
-        testCompile 'org.powermock:powermock-core:1.5.1'
-        testCompile 'org.powermock:powermock-module-junit4:1.5.1'
-        testCompile 'org.powermock:powermock-api-mockito:1.5.1'
-        testCompile 'org.mockito:mockito-core:1.9.5'
+        testCompile "junit:junit:$junitVersion"
+        testCompile "org.powermock:powermock-core:1.5.1"
+        testCompile "org.powermock:powermock-module-junit4:1.5.1"
+        testCompile "org.powermock:powermock-api-mockito:1.5.1"
+        testCompile "org.mockito:mockito-core:1.9.5"
     }
 
     configurations.all {
         resolutionStrategy {
             // force versions that were specified in dependencies:
             // hbase/hive has a different versions than other hadoop components
-            force 'commons-codec:commons-codec:1.4'
-            force 'commons-collections:commons-collections:3.2.1'
-            force 'commons-logging:commons-logging:1.1.3'
-            force 'org.apache.avro:avro:1.7.4'
-            force 'org.apache.zookeeper:zookeeper:3.4.6'
-            force 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
-            force 'junit:junit:4.11'
+            force "commons-codec:commons-codec:1.4"
+            force "commons-collections:commons-collections:3.2.1"
+            force "commons-logging:commons-logging:1.1.3"
+            force "org.apache.avro:avro:1.7.4"
+            force "org.apache.zookeeper:zookeeper:3.4.6"
+            force "org.codehaus.jackson:jackson-mapper-asl:1.9.13"
+            force "junit:junit:$junitVersion"
             force "com.google.guava:guava:11.0.2" // because this version ships with HDP-2.5.3
             force "com.google.code.gson:gson:2.8.2" // because HDP ships with an older version, but Ignite expects 2.8.2
 
@@ -316,13 +316,13 @@ project('pxf-api') {
 }
 
 wrapper {
-    gradleVersion = '4.9'
+    gradleVersion = '4.10.3'
 }
 
 
 task version {
     doLast {
-        println project.version
+        println ${version}
     }
 }
 
@@ -367,7 +367,7 @@ task assemble(type: Copy, dependsOn: [subprojects.jar, project(':pxf-service').w
     from("pxf-service/src/scripts/pxf-env-default.sh") { into 'conf' }
     from("pxf-service/src/templates") { into 'templates' }
     doLast {
-        new File("${buildDir}/build/stage/version").text = "$project.version\n"
+        new File("${buildDir}/build/stage/version").text = "${version}\n"
     }
 }
 
