--- a/server/gradle.properties
+++ b/server/gradle.properties
@@ -21,6 +21,7 @@ hadoopVersion=2.8.5
 htraceVersion=4.0.1-incubating
 hiveVersion=1.2.1
 hbaseVersionJar=1.1.2
+junitVersion=4.11
 tomcatVersion=7.0.62
 pxfProtocolVersion=v15
 parquetVersion=1.9.0
