--- a/server/pxf-service/src/templates/tomcat/conf/catalina.properties
+++ b/server/pxf-service/src/templates/tomcat/conf/catalina.properties
@@ -132,6 +132,7 @@ tomcat.util.buf.StringCache.byte.enabled=true
 #tomcat.util.buf.StringCache.trainThreshold=500000
 #tomcat.util.buf.StringCache.cacheSize=5000
 
-base.shutdown.port=-1
+base.shutdown.port=5889
+connector.http.port=5888
 connector.https.port=8443
 
