--- a/concourse/settings/perf-settings-500g.yml
+++ b/concourse/settings/perf-settings-500g.yml
@@ -21,6 +21,7 @@ perf-trigger-interval: 720h
 perf-trigger-start: 12:30 PM
 perf-trigger-stop: 12:40 PM
 
+perf-benchmark-adl: false
 perf-benchmark-s3: false
 perf-benchmark-gphdfs: true
 
