--- a/concourse/settings/perf-settings.yml
+++ b/concourse/settings/perf-settings.yml
@@ -22,5 +22,6 @@ perf-trigger-interval: 24h
 perf-trigger-start: 12:30 PM
 perf-trigger-stop: 12:40 PM
 
+perf-benchmark-adl: true
 perf-benchmark-s3: true
 perf-benchmark-gphdfs: true
