--- a/server/build.gradle
+++ b/server/build.gradle
@@ -17,78 +17,35 @@
  * under the License.
  */
 
-buildscript {
-
-    repositories {
-        jcenter()
-    }
-
-    dependencies {
-        classpath "com.netflix.nebula:gradle-ospackage-plugin:2.2.6"
-        classpath 'com.netflix.nebula:gradle-aggregate-javadocs-plugin:2.2.+'
-    }
-}
-
 plugins {
-    id "de.undercouch.download" version "3.4.3"
+    id 'de.undercouch.download' version '3.4.3'
 }
 
-apply plugin: 'nebula-aggregate-javadocs'
-
-buildDir = '.'
+wrapper {
+    gradleVersion = '4.10.3'
+}
 
 allprojects {
+    apply plugin: 'java'
     apply plugin: 'idea'
-    apply plugin: 'eclipse'
 
     repositories {
         jcenter()
     }
-}
-
-idea {
-    project {
-        jdkName = "1.8"
-        languageLevel = "1.8"
-        vcs = "Git"
-    }
-}
-
-subprojects { subProject ->
-    apply plugin: 'java'
-    apply plugin: 'os-package'
 
     group = 'org.greenplum.pxf'
-
     sourceCompatibility = 1.8
-    targetCompatibility = 1.8
-
-    task removeIdeaOutDirectory(type: Delete) {
-        file("${projectDir}/out").deleteDir()
-    }
-
-    clean {
-        dependsOn(removeIdeaOutDirectory)
-    }
 
     compileJava {
         options.compilerArgs += [
-                "-g", "-Xlint:varargs", "-Xlint:cast",
-                "-Xlint:classfile", "-Xlint:dep-ann", "-Xlint:divzero",
-                "-Xlint:empty", "-Xlint:finally", "-Xlint:overrides",
-                "-Xlint:path", "-Xlint:processing", "-Xlint:static",
-                "-Xlint:try", "-Xlint:fallthrough", "-Xlint:deprecation",
-                "-Xlint:unchecked", "-Xlint:-options", "-Werror"]
+            "-g", "-Xlint:varargs", "-Xlint:cast", "-Xlint:classfile", "-Xlint:dep-ann", "-Xlint:divzero",
+            "-Xlint:empty", "-Xlint:finally", "-Xlint:overrides", "-Xlint:path", "-Xlint:processing", "-Xlint:static",
+            "-Xlint:try", "-Xlint:fallthrough", "-Xlint:deprecation", "-Xlint:unchecked", "-Xlint:-options", "-Werror"]
     }
 
-    compileTestJava {
-        options.compilerArgs += [
-                "-Xlint:varargs", "-Xlint:cast", "-Xlint:classfile",
-                "-Xlint:dep-ann", "-Xlint:divzero", "-Xlint:empty",
-                "-Xlint:finally", "-Xlint:overrides", "-Xlint:path",
-                "-Xlint:processing", "-Xlint:static", "-Xlint:try",
-                "-Xlint:fallthrough", "-Xlint:deprecation", "-Xlint:unchecked",
-                "-Xlint:-options"]
+    javadoc {
+        source = sourceSets.main.allJava
+        classpath = configurations.compile
     }
 
     tasks.withType(JavaCompile) {
@@ -101,12 +58,8 @@ subprojects { subProject ->
         from "../../LICENSE"
     }
 
-    repositories {
-        jcenter()
-    }
-
     dependencies {
-        testCompile "junit:junit:$junitVersion"
+        testCompile "junit:junit:${junitVersion}"
         testCompile "org.powermock:powermock-core:1.5.1"
         testCompile "org.powermock:powermock-module-junit4:1.5.1"
         testCompile "org.powermock:powermock-api-mockito:1.5.1"
@@ -123,10 +76,9 @@ subprojects { subProject ->
             force "org.apache.avro:avro:1.7.4"
             force "org.apache.zookeeper:zookeeper:3.4.6"
             force "org.codehaus.jackson:jackson-mapper-asl:1.9.13"
-            force "junit:junit:$junitVersion"
+            force "junit:junit:${junitVersion}"
             force "com.google.guava:guava:11.0.2" // because this version ships with HDP-2.5.3
             force "com.google.code.gson:gson:2.8.2" // because HDP ships with an older version, but Ignite expects 2.8.2
-
         }
     }
 
@@ -139,8 +91,8 @@ subprojects { subProject ->
     }
 
     task copyRuntimeDependencies(type: Copy) {
-        delete "$buildDir/libs-shared"
-        into "$buildDir/libs-shared"
+        delete "${buildDir}/libs-shared"
+        into "${buildDir}/libs-shared"
         from configurations.bundleJars {
             // providedCompile is a war plugin specific thing to exclude in war.
             // We have to exclude tomcat explicitly
@@ -159,19 +111,19 @@ project('pxf') {
         bundleJars "com.fasterxml.jackson.core:jackson-annotations:2.6.0"
         bundleJars "org.apache.httpcomponents:httpclient:4.5.2"
         bundleJars "org.apache.httpcomponents:httpcore:4.4.4"
-        bundleJars "org.apache.hadoop:hadoop-aws:$hadoopVersion"
-        bundleJars "com.amazonaws:aws-java-sdk-core:$awsJavaSdk"
-        bundleJars "com.amazonaws:aws-java-sdk-kms:$awsJavaSdk"
-        bundleJars "com.amazonaws:aws-java-sdk-s3:$awsJavaSdk"
+        bundleJars "org.apache.hadoop:hadoop-aws:${hadoopVersion}"
+        bundleJars "com.amazonaws:aws-java-sdk-core:${awsJavaSdk}"
+        bundleJars "com.amazonaws:aws-java-sdk-kms:${awsJavaSdk}"
+        bundleJars "com.amazonaws:aws-java-sdk-s3:${awsJavaSdk}"
         // Azure Datalake jars
-        bundleJars "org.apache.hadoop:hadoop-azure-datalake:$hadoopVersion"
+        bundleJars "org.apache.hadoop:hadoop-azure-datalake:${hadoopVersion}"
         bundleJars "com.microsoft.azure:azure-data-lake-store-sdk:2.2.3"
 //        // GCS jars and dependencies
-////        bundleJars "com.google.cloud.bigdataoss:gcs-connector:hadoop2-1.9.7"
-////        bundleJars "com.google.cloud.bigdataoss:gcsio:1.9.7"
-////        bundleJars "com.google.flogger:flogger:0.3.1"
-////        bundleJars "com.google.flogger:flogger-system-backend:0.3.1"
-////        bundleJars "com.google.flogger:google-extensions:0.3.1"
+//        bundleJars "com.google.cloud.bigdataoss:gcs-connector:hadoop2-1.9.7"
+//        bundleJars "com.google.cloud.bigdataoss:gcsio:1.9.7"
+//        bundleJars "com.google.flogger:flogger:0.3.1"
+//        bundleJars "com.google.flogger:flogger-system-backend:0.3.1"
+//        bundleJars "com.google.flogger:google-extensions:0.3.1"
     }
 }
 
@@ -184,17 +136,92 @@ project('pxf-api') {
         compile "commons-configuration:commons-configuration:1.6"
         compile "commons-codec:commons-codec:1.4"
         compile "com.sun.jersey:jersey-core:1.9"
-        compile "org.apache.hadoop:hadoop-common:$hadoopVersion"
+        compile "org.apache.hadoop:hadoop-common:${hadoopVersion}"
 
         bundleJars "org.codehaus.jackson:jackson-core-asl:1.9.13"
         bundleJars "asm:asm:3.2"
     }
 }
 
-task jar(type: Copy, dependsOn: [subprojects.build]) {
-    into 'build'
-    subprojects { subProject ->
-        from("${project.name}/build/libs") { into 'libs' }
+project('pxf-hbase') {
+    dependencies {
+        compile(project(':pxf-api'))
+        compile "org.apache.hbase:hbase-client:${hbaseVersion}"
+
+        bundleJars "org.apache.hbase:hbase-common:${hbaseVersion}"
+        bundleJars "org.apache.hbase:hbase-protocol:${hbaseVersion}"
+        bundleJars "org.apache.htrace:htrace-core:3.1.0-incubating"
+        bundleJars "io.netty:netty-all:4.0.23.Final"
+        bundleJars "org.apache.zookeeper:zookeeper:3.4.6"
+        bundleJars "com.yammer.metrics:metrics-core:2.2.0"
+    }
+}
+
+project('pxf-hdfs') {
+    dependencies {
+        compile(project(':pxf-api'))
+        compile "org.apache.avro:avro-mapred:1.7.4"
+        compile "org.apache.hadoop:hadoop-mapreduce-client-core:${hadoopVersion}"
+        compile "org.apache.hadoop:hadoop-yarn-api:${hadoopVersion}" // Kerberos dependency
+        compile "org.apache.hadoop:hadoop-common:${hadoopVersion}"
+        compile "org.apache.htrace:htrace-core4:${htraceVersion}"
+        compile "org.apache.hadoop:hadoop-hdfs:${hadoopVersion}"
+        compile "org.apache.hadoop:hadoop-hdfs-client:${hadoopVersion}"
+        compile "org.apache.parquet:parquet-hadoop-bundle:${parquetVersion}"
+
+        bundleJars "org.apache.avro:avro:1.7.4"
+    }
+}
+
+project('pxf-hive') {
+    dependencies {
+        compile(project(':pxf-api'))
+        compile(project(':pxf-hdfs'))
+        compile("org.apache.hive:hive-exec:${hiveVersion}") {
+            exclude module: 'calcite-core'
+            exclude module: 'calcite-avatica'
+            exclude module: 'guava'
+        }
+        bundleJars "org.apache.hive:hive-metastore:${hiveVersion}"
+        bundleJars "org.apache.hive:hive-serde:${hiveVersion}"
+        bundleJars "org.apache.thrift:libfb303:0.9.3"
+        bundleJars "org.antlr:antlr-runtime:3.4"
+        bundleJars "org.datanucleus:datanucleus-api-jdo:4.2.1"
+        bundleJars "org.datanucleus:datanucleus-core:4.1.6"
+        bundleJars "org.xerial.snappy:snappy-java:1.0.5"
+        bundleJars "javax.jdo:jdo-api:3.0.1"
+    }
+}
+
+project('pxf-ignite') {
+    dependencies {
+        compile(project(':pxf-api'))
+        compile "com.google.code.gson:gson:2.8.2"
+        compile "org.apache.commons:commons-compress:1.16.1"
+    }
+}
+
+project('pxf-jdbc') {
+    dependencies {
+        compile(project(':pxf-api'))
+
+        bundleJars "postgresql:postgresql:8.4-702.jdbc4"
+    }
+}
+
+project('pxf-json') {
+    dependencies {
+        compile(project(':pxf-hdfs'))
+        compile(project(':pxf-api'))
+        testCompile 'pl.pragmatists:JUnitParams:1.0.2'
+    }
+
+    task create_tweets_tgz(type: Exec) {
+        commandLine 'tar', '-zcf', 'src/test/resources/tweets.tar.gz', '-C', 'src/test/resources', 'tweets-pp.json'
+    }
+
+    test {
+        dependsOn(create_tweets_tgz)
     }
 }
 
@@ -211,14 +238,14 @@ project('pxf-service') {
     }
     dependencies {
         providedCompile(project(':pxf-api'))
-        providedCompile "org.apache.hadoop:hadoop-common:$hadoopVersion"
-        providedCompile "org.apache.htrace:htrace-core4:$htraceVersion"
-        providedCompile "org.apache.hadoop:hadoop-hdfs:$hadoopVersion"
-        providedCompile "org.apache.hadoop:hadoop-hdfs-client:$hadoopVersion"
+        providedCompile "org.apache.hadoop:hadoop-common:${hadoopVersion}"
+        providedCompile "org.apache.htrace:htrace-core4:${htraceVersion}"
+        providedCompile "org.apache.hadoop:hadoop-hdfs:${hadoopVersion}"
+        providedCompile "org.apache.hadoop:hadoop-hdfs-client:${hadoopVersion}"
         providedCompile "org.apache.tomcat:tomcat-catalina:$tomcatVersion"
 
 
-        bundleJars "org.apache.hadoop:hadoop-auth:$hadoopVersion"
+        bundleJars "org.apache.hadoop:hadoop-auth:${hadoopVersion}"
         bundleJars "commons-cli:commons-cli:1.2"
         bundleJars "commons-io:commons-io:2.4"
         bundleJars "com.google.guava:guava:11.0.2"
@@ -231,109 +258,14 @@ project('pxf-service') {
     }
 }
 
-project('pxf-hdfs') {
-    dependencies {
-        compile(project(':pxf-api'))
-        compile "org.apache.avro:avro-mapred:1.7.4"
-        compile "org.apache.hadoop:hadoop-mapreduce-client-core:$hadoopVersion"
-        compile "org.apache.hadoop:hadoop-yarn-api:$hadoopVersion" // Kerberos dependency
-        compile "org.apache.hadoop:hadoop-common:$hadoopVersion"
-        compile "org.apache.htrace:htrace-core4:$htraceVersion"
-
-        compile "org.apache.hadoop:hadoop-hdfs:$hadoopVersion"
-        compile "org.apache.hadoop:hadoop-hdfs-client:$hadoopVersion"
-        compile "org.apache.parquet:parquet-hadoop-bundle:$parquetVersion"
-
-        bundleJars "org.apache.avro:avro:1.7.4"
-    }
-}
-
-project('pxf-hive') {
-    dependencies {
-        compile(project(':pxf-api'))
-        compile(project(':pxf-hdfs'))
-        compile("org.apache.hive:hive-exec:$hiveVersion") {
-            exclude module: 'calcite-core'
-            exclude module: 'calcite-avatica'
-            exclude module: 'guava'
-        }
-        bundleJars "org.apache.hive:hive-metastore:$hiveVersion"
-        bundleJars "org.apache.hive:hive-serde:$hiveVersion"
-        bundleJars "org.apache.thrift:libfb303:0.9.3"
-        bundleJars "org.antlr:antlr-runtime:3.4"
-        bundleJars "org.datanucleus:datanucleus-api-jdo:4.2.1"
-        bundleJars "org.datanucleus:datanucleus-core:4.1.6"
-        bundleJars "org.xerial.snappy:snappy-java:1.0.5"
-        bundleJars "javax.jdo:jdo-api:3.0.1"
-    }
-}
-
-project('pxf-json') {
-    dependencies {
-        compile(project(':pxf-hdfs'))
-        compile(project(':pxf-api'))
-        testCompile 'pl.pragmatists:JUnitParams:1.0.2'
-    }
-
-    task create_tweets_tgz(type: Exec) {
-        commandLine 'tar', '-zcf', 'src/test/resources/tweets.tar.gz', '-C', 'src/test/resources', 'tweets-pp.json'
-    }
-
-    tasks['test'].dependsOn('create_tweets_tgz')
-}
-
-project('pxf-hbase') {
-    dependencies {
-        compile(project(':pxf-api'))
-        compile "org.apache.hbase:hbase-client:$hbaseVersionJar"
-
-        bundleJars "org.apache.hbase:hbase-common:$hbaseVersionJar"
-        bundleJars "org.apache.hbase:hbase-protocol:$hbaseVersionJar"
-        bundleJars "org.apache.htrace:htrace-core:3.1.0-incubating"
-        bundleJars "io.netty:netty-all:4.0.23.Final"
-        bundleJars "org.apache.zookeeper:zookeeper:3.4.6"
-        bundleJars "com.yammer.metrics:metrics-core:2.2.0"
-    }
-}
-
-project('pxf-jdbc') {
-    dependencies {
-        compile(project(':pxf-api'))
-
-        bundleJars "postgresql:postgresql:8.4-702.jdbc4"
-    }
-}
-
-project('pxf-ignite') {
-    dependencies {
-        compile(project(':pxf-api'))
-        compile "com.google.code.gson:gson:2.8.2"
-        compile "org.apache.commons:commons-compress:1.16.1"
-    }
-}
-
-project('pxf-api') {
-}
-
-wrapper {
-    gradleVersion = '4.10.3'
-}
-
-
-task version {
-    doLast {
-        println ${version}
-    }
-}
-
-// tomcat
-def tomcatName = "apache-tomcat-${tomcatVersion}"
+//tomcat
+def tomcatName = "apache-tomcat-" + "${tomcatVersion}"
 def tomcatTargetDir = "tomcat/build"
 
 task tomcatGet {
     doLast {
-        def tomcatTar = "${tomcatName}.tar.gz"
-        def tomcatUrl = "http://archive.apache.org/dist/tomcat/tomcat-7/v${tomcatVersion}/bin/${tomcatTar}"
+        def tomcatTar = "${tomcatName}" + ".tar.gz"
+        def tomcatUrl = "http://archive.apache.org/dist/tomcat/tomcat-7/v" + "${tomcatVersion}/bin/${tomcatTar}"
 
         if (file("${tomcatTargetDir}/${tomcatName}").exists()) {
             println "${tomcatName} already exists, nothing to do"
@@ -355,7 +287,7 @@ task tomcatGet {
     }
 }
 
-task assemble(type: Copy, dependsOn: [subprojects.jar, project(':pxf-service').war, subprojects.copyRuntimeDependencies, tomcatGet]) {
+task bundle(type: Copy, dependsOn: [subprojects.jar, project(':pxf-service').war, subprojects.copyRuntimeDependencies, tomcatGet]) {
     into "build/stage"
     subprojects { project ->
         from("${project.name}/build/libs") { into 'lib' }
@@ -367,19 +299,25 @@ task assemble(type: Copy, dependsOn: [subprojects.jar, project(':pxf-service').w
     from("pxf-service/src/scripts/pxf-env-default.sh") { into 'conf' }
     from("pxf-service/src/templates") { into 'templates' }
     doLast {
-        new File("${buildDir}/build/stage/version").text = "${version}\n"
+        new File("${buildDir}/stage/version").text = "${version}\n"
     }
 }
 
-task tar(type: Tar, dependsOn: [assemble]) {
+task install(type: Copy, dependsOn: [bundle]) {
+    from bundle.outputs.files
+    into System.getProperty('deployPath')
+}
+
+task tar(type: Tar, dependsOn: [bundle]) {
     baseName = "${project.name}"
     compression = Compression.GZIP
     extension = 'tar.gz'
     destinationDir = file("${buildDir}/dist")
-    from assemble.outputs.files
+    from bundle.outputs.files
 }
 
-task install(type: Copy, dependsOn: [assemble]) {
-    from assemble.outputs.files
-    into System.properties['deployPath']
+task version {
+    doLast {
+        println ${version}
+    }
 }
