--- a/concourse/settings/perf-settings-50g.yml
+++ b/concourse/settings/perf-settings-50g.yml
@@ -19,13 +19,14 @@ perf-hadoop-instance-type: n1-standard-2
 perf-hadoop-disk-size: 64
 
 # 2 weeks
-perf-trigger-interval: 336h
+#perf-trigger-interval: 336h
+perf-trigger-interval: 24h
 perf-trigger-start: 12:30 PM
 perf-trigger-stop: 12:40 PM
 
-perf-benchmark-adl: true
+perf-benchmark-adl: false
 perf-benchmark-s3: true
-perf-benchmark-gphdfs: true
+perf-benchmark-gphdfs: false
 
 job-name: perf-multi-node-50G
 
